argocd-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
  namespace: argocd
spec:
  parentRefs:
    - name: kind-ingress-gateway
      sectionName: https
  hostnames:
    - argocd.test.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
